2011-01-22  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated SQL with version and new embedded "so".

	* include/config_process.php: Version.

	* images/os_icons/embedded.png,
	images/networkmap/14.png: New embedded agent icon.

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	disabled modules in the list of element tab of the visual console editor.
	
	Fixes: #3155701

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fixed and optimized the extract the
	list of Module name for the select box in the filter.

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_generalagente.php: fixed when the agent haven't
	ip address.
	
	Fixes: #3162646

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: added to call to enterprise functions
	to delete "pseudo code" of local module when delete in multiple delete
	action.
	
	Fixes: #3161621

	* include/functions_filemanager.php: cleaned source code old unused
	comments.
	
	* include/functions_ui.php: in function "printTruncateText" fixed when pass
	0 character to trunk, now return all text. And in function
	"print_agent_name" cleaned source code style.
	
	* operation/agentes/estado_agente.php: fixed order of params in the call
	of function "print_agent_name".

2011-01-19  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php, 
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixed the resize
	background, and now the visualmap the background resize. And now the items
	move with resize the background.
	
	Fixes: #3156131
	
	Pending task: #2996500

2011-01-19 Javier Lanz <javier.lanz@artica.es>
	* extensions/module_groups.php: Added truncation and scroll bar
	* operation/agentes/status_monitor.php: Fixed combobox functionality