@@ -80,6 +80,7 @@ echo '</form>';
 echo '<span id="any_text" style="display: none;">' . __('Any') . '</span>';
 ?>
 <script language="javascript" type="text/javascript">
+var show_only_enabled_modules = true;
 $(document).ready (function () {
 	//$("#id_agents").change (agent_changed);
 	$("#id_agents").change (agent_changed_by_multiple_agents);
