@@ -1,3 +1,14 @@
+2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/javascript/pandora.js, operation/agentes/exportdata.php,
+	operation/agentes/ver_agente.php,
+	godmode/reporting/visual_console_builder.wizard.php,
+	godmode/reporting/visual_console_builder.editor.js,
+	godmode/reporting/visual_console_builder.elements.php: fixed to show by ajax
+	the disabled modules and the disabled agents.
+	
+	Fixes: #3155701
+
 2011-01-22  Sancho Lerena <slerena@artica.es>
 
 	* pandoradb_data.sql: Updated SQL with version and new embedded "so".
